<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#4D5C6E"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/text25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/syloti_nagri"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text25"
            android:text="@string/the_regional_language_of_sylhet"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <ImageView
            android:layout_centerInParent="true"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/app_icon" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/lesson1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background"
            android:text="@string/lesson_1"
            android:textColor="#ffffff"
            android:textSize="35sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/composition"
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/lesson_2"
            android:textSize="35sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/story"
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/lesson_3"
            android:textSize="35sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/dialogue"
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/lesson_4"
            android:textSize="35sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <Button
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/lesson_5"
            android:textSize="35sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>


       </LinearLayout>
    </ScrollView>
</LinearLayout>
